<resources>
    <string name="app_name">MIREA_2</string>
    <string name="guess_next">Guess next</string>
    <string name="say_his_name">SAY HIS NAME</string>
    <string name="write_here">Write here</string>
    <string name="say_my_name">SAY MY NAME</string>
    <string name="are_you_right">Are you right?</string>
    <string name="edit_text">Edit text</string>
    <string name="say_hi">Say Hi</string>
    <string name="hello_relative">HELLO RELATIVE</string>
    <string name="linearConstraint_request_key">fromLinearToConstraint</string>
    <string name="constraintLinear_request_key">fromConstraintToLinear</string>
    <string name="fromLinearToConstraint_bundle_key">Tate</string>
    <string name="fromConstraintToLinear_bundle_key">right?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>